--- a/sml/build.conf
+++ b/sml/build.conf
@@ -1,7 +1,9 @@
 COMPILER_NAME='lunarml'
-BUILD__COMPILER_HOME='/Users/ben/build/lunarml/lunarml.git'
-BUILD__COMPILER_BIN='/Users/ben/build/lunarml/lunarml.git/bin/lunarml'
-BUILD__COMPILER_LIB='/Users/ben/build/lunarml/lunarml.git/lib/lunarml'
-BUILD__INTERP_HOME='/usr/local/Cellar//lua@5.3/5.3.6'
-BUILD__INTERP_BIN='/usr/local/Cellar//lua@5.3/5.3.6/bin/lua'
-BUILD__INTERP_LIB=''
+COMPILER_HOME="${LUNARML_HOME:-}"
+COMPILER_HOME_DEFAULT=$HOME/build/lunarml/lunarml.git
+COMPILER_LIB='lib/lunarml'
+
+INTERP_NAME=lua
+INTERP_VERS=5.3
+INTERP_VERS_BASEDIR='/usr/local/Cellar/'
+INTERP_VERS_MINOR=5.3.6
